--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -46,35 +46,55 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-            	<h1>Bursa</h1>
-                <h2>Description</h2>
-                <p>Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это осутствие практики с освоенным материалом.</p>
-                <p>Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить,очень быстро забываются.</p>
-                <h2>Program</h2>
-                <table class="table table-striped table-hover">
+            	<h2>Список стедетов курса PyBursa</h2>
+
+                <table class="table table-striped table-hover list_student">
                     <thead>
                         <tr>
-                            <th>Занятие </th>
-                            <th>Тема </th>
-                            <th>Содержание </th>
+                            <th>№</th>
+                            <th>Surname</th>
+                            <th>Name</th>
+                            <th>Adress</th>
+                            <th>Skype</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>01 </td>
-                            <td>Основы Python </td>
-                            <td>zen, pep8, pylint, tools, IDE консоль, типы данных, операторы синтаксис управляющих конструкций (if, for...) исключения и разбор стектрейса кодировка в Python </td>
+                            <td><a href="student_detail.html#govorov">1</a></td>
+                            <td>Говоров</td>
+                            <td>Игорь</td>
+                            <td>Украина, г.Харьков, пер.Чернышевского,д.15,кв.3</td>
+                            <td>govorov</td>
                         </tr>
                         <tr>
-                            <td>02 </td>
-                            <td>Строки и итераторы </td>
-                            <td>работа со строками и итерируемыми типами запуск скрипта и параметры git http://try.github.com/levels/ </td>
+                            <td><a href="student_detail.html#sinelnikov">2</a></td>
+                            <td>Синельников</td>
+                            <td>Владимир</td>
+                            <td>Украина, г.Харьков, ул.Танкопия,д.24,кв.3</td>
+                            <td>sinelnik</td>
                         </tr>
                         <tr>
-                            <td>03 </td>
-                            <td>Функции и модульность </td>
-                            <td>функции (def, lambda) генераторы списков модули, структура </td>
+                            <td><a href="student_detail.html#sheva">3</a></td>
+                            <td>Шевченко</td>
+                            <td>Вячеслав</td>
+                            <td>Украина, г.Харьков, пер.Маломясницкий,д.10,кв.3</td>
+                            <td>sheva</td>
                         </tr>
+                        <tr>
+                            <td><a href="student_detail.html#karnauch">4</a></td>
+                            <td>Карнаух</td>
+                            <td>Екатерина</td>
+                            <td>Украина, г.Харьков, ул.Космическая,д.87,кв.3</td>
+                            <td>karnauch</td>
+                        </tr>
+                        <tr>
+                            <td><a href="student_detail.html#gahov">5</a></td>
+                            <td>Гахов</td>
+                            <td>Станислав</td>
+                            <td>Украина, г.Харьков, пер.Петровского,д.2,кв.3</td>
+                            <td>gahov</td>
+                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
