--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
       </tr>
       <tr>
         <td colspan="3" class="more">
-          <div class="alert alert-success" role="alert">Дальше больше!
+          <div class="alert alert-success" role="alert" class="text-capitalize">Дальше больше!
           </div>
         </td>
       </tr>
