--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         </td>
         <td>
           <ul>
-            <li>zen, pep8, pylint, tools, IDE</li>
+            <li><code>zen</code>, <code>pep8</code>, <code>pylint</code>, tools, IDE</li>
             <li>консоль, типы данных, операторы</li>
             <li>синтаксис управляющих конструкций (if, for...)</li>
             <li>исключения и разбор стектрейса</li>
@@ -63,7 +63,7 @@
           <ul>
             <li>работа со строками и итерируемыми типами</li>
             <li>запуск скрипта и параметры</li>
-            <li>git http://try.github.com/levels/</li>
+            <li><p class="text-primary">git http://try.github.com/levels/</p></li>
           </ul>
         </td>
       </tr>
@@ -74,7 +74,7 @@
         </td>
         <td>
           <ul>
-            <li>функции (def, lambda)</li>
+            <li>функции (<code>def</code>, <code>lambda</code>)</li>
             <li>генераторы списков</li>
             <li>модули, структура</li>
           </ul>
