bootstrap init added

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
     <title>Main page</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,23 +38,25 @@
             <li role="presentation"><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project Bursa</h3>
+        <h3 class="text-muted">ItBursa</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>PyBursa course</h1>
+        <div class="text-center">
+        <h1>PyBursa</h1>
         <h4>Description</h4>
+        </div>
         <p class="lead">The course starts by overviewing Python, and then goes on to study Python's collections - Lists, Tuples and Dictionaries etc. We introduce the development environments and other resources available, and take a look with practical exercises at test procedures and good code design.</p>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h2>Program</h2>
+          <h2 class="text-left">Program</h2>
         </div>
 
         <div class="col-lg-6">
           <h4>Python language fundamentals</h4>
-            <p>Introduction to Python; Python - Fundamentals; Conditionals and Loops; Lists and Tuples
+            <p  class="text-justify">Introduction to Python; Python - Fundamentals; Conditionals and Loops; Lists and Tuples
               Functions, Modules and Packages.</p>
           <h4>Python, Object Orientation, Object use</h4>
             <p>Python - using functions, objects and modules; Object Oriented Python; Dictionaries
@@ -65,14 +67,14 @@
       </div>
 
       <footer class="footer">
-        <p>© 2015</p>
+        <p class="text-left">© 2015</p>
       </footer>
 
     </div> <!-- /container -->
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- <script src="../static/js/ie10-viewport-bug-workaround.js"></script>-->
 
 
 </body></html>
