--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,14 +12,14 @@
     <title>Contacts page</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+    <!-- <script src="../static/js/ie-emulation-modes-warning.js"></script>-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,7 +38,7 @@
             <li role="presentation"><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project Bursa</h3>
+        <h3 class="text-muted">ItBursa</h3>
       </div>
 
       <div class="row marketing">
@@ -78,14 +78,14 @@
       </div>
 
       <footer class="footer">
-        <p>© 2015</p>
+        <p class="text-left">© 2015</p>
       </footer>
 
     </div> <!-- /container -->
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
 
 
 </body></html>
