corrected links and text in index html

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Main</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -38,9 +38,7 @@
      <div class= "container">    
       <div class="jumbotron">
         <h1>Description</h1>
-        <hr>
         <p>Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
-        
         <p class ="nota-bene">5 Reasons why Python is Powerful Enough for Google </p>
         <ul class ="whypython">
         <li>Python is Efficient
