corrected links and text in index html

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main</a></li>
+            <li class="active"><a href="index.html">Main</a><span class="sr-only">(current)</span></li>
             <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -37,31 +37,35 @@
     </nav>    
      <div class= "container">    
       <div class="jumbotron">
+        <div class="container"><h1>PyBursa</h1></div>
         <h1>Description</h1>
         <p>Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
         <p class ="nota-bene">5 Reasons why Python is Powerful Enough for Google </p>
-        <ul class ="whypython">
+        <div class = "container"><ul class ="whypython">
         <li>Python is Efficient
         <li>Python is Fast
         <li>Python is Broad
         <li>Python is not Python
         <li>Python is Easy
         </ul>
+        </div>
         <hr>
         <h2>Programm</h2>
-        <ol class = "courseinfo">
-          <li>Getting Started</li>
-          <li>Python Set Up</li>
-          <li>Introduction</li>
-          <li>Strings</li>
-          <li>Lists</li>
-          <li>Sorting</li>
-          <li>Dicts and Files</li>
-          <li>Regular Expressions</li>
-          <li>Utilities</li>
-          <li>Lecture Videos day1, day2</li>
-          <li>Python Exercises</li>
-        </ol>
+        <div class = "container">
+          <ol class = "courseinfo">
+            <li>Getting Started</li>
+            <li>Python Set Up</li>
+            <li>Introduction</li>
+            <li>Strings</li>
+            <li>Lists</li>
+            <li>Sorting</li>
+            <li>Dicts and Files</li>
+            <li>Regular Expressions</li>
+            <li>Utilities</li>
+            <li>Lecture Videos day1, day2</li>
+            <li>Python Exercises</li>
+          </ol>
+        </div>
       </div>    
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
