added new styles and sloder

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/darka.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Manager</h2>
+          <h2 id="manager">Manager</h2>
           <ul>
             <li>Name: Дария Михалевич</li>
             <li>Skype: darka.darka.darka.darka.</li>
@@ -122,7 +122,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/pasha.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Founder</h2>
+          <h2 id="founder">Founder</h2>
           <ul>
             <li>Name: Павел Обод</li>
             <li>Skype: azaless</li>
@@ -133,7 +133,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/alena.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Director</h2>
+          <h2 id="director">Director</h2>
           <ul>
             <li>Name: Алена Чайка</li>
             <li>Skype: alena.itbursa</li>
