--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script type="text/javascript" src="../static/js/mine.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link href="carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
@@ -47,14 +49,13 @@
             </div>
           </div>
         </nav>
-
       </div>
     </div>
     <div>
     	<div class="container">
-    		<h1>PyBursa Project</h1>
+    		<h1 id="pybursa_project">PyBursa Project</h1>
 	    	<div class="container">
-	    		<h3>Description</h3>
+	    		<h3 id="description">Description</h3>
 	    		<p class="first-p">	
 	    			В этом курсе мы сместили акцент в сторону практики.
 					Будет умеренное количество теории - максимум практики.
@@ -64,7 +65,7 @@
 	    		</p>
 	    	</div>
 	    	<div class="container">
-	    		<h3>Program</h3>
+	    		<h3 id="program">Program</h3>
 	    		<ul>
 	    			<li id="list">
 			    		<p>
@@ -95,7 +96,7 @@
 							</h5>
 			    		</p>
 			    	</li>
-			    	<li>
+			    	<li id="list">
 			    		<p>
 			    			<h5>
 				    		встроенные библиотеки http://docs.python.org/
@@ -103,7 +104,7 @@
 							PYTHONPATH и виртуальное окружение
 							</h5>
 			    		</p>
-			    	</li>
+			    	</li id="list2">
 			    	<li>
 			    		<p>
 			    			<h5>
@@ -116,14 +117,76 @@
 	    	</div>	
 	    </div>
     </div>
-      <!-- FOOTER -->
-      <footer>
-
-      </footer>
 
     </div><!-- /.container -->
+    <div class="container">
+    	<div id="slider_center">
 
-
+		    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="../static/images/1.jpg" alt="First slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="../static/images/2.jpg" alt="Second slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="../static/images/3.jpg" alt="Third slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="../static/images/4.jpg" alt="Third slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="../static/images/5.jpg" alt="Third slide">
+          <div class="container">
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+		</div>
+	</div>
+	      <!-- FOOTER -->
+      <footer>
+      		<div class="container">
+      			<div class="footer_div">
+      				<ul>
+      					<ul>
+      						<h3 id="end_of_course">По окончанию курсов вы будете точно...<h3>
+							<li>следовать zen-python, писать правильный python-код согласно лучшим практикам</li>
+							<li>разрабатывать серверный бекенд веб-приложений на современном языке</li>
+							<li>реализовывать и разворачивать полноценный веб-проект на python/django</li>
+							<li>Вложив средства в своё образование, Вы сможете окупить обучение уже на первой зарплате</li>
+      					</ul>
+      				</ul>
+      			</div>
+      		</div>
+      </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
