--- a/templates/index.html
+++ b/templates/index.html
@@ -27,15 +27,15 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
       <div class="jumbotron">
-        <h2 class="header_top">Description</h2>
+        <h2>Description</h2>
         <p class="text">Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это отсутствие практики с освоенным материалом.</p>
         <p class="text">Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить, очень быстро забываются.</p>
         <p class="text">Многие начинающие сдаются на полпути, так как устают, им надоедает бесконечное блуждание по сети в поисках крупиц информации, из которых трудно собрать общую картину.</p>
