--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,6 @@
   </head>
   <body>
   <div class="wrapper">
-    <div class="header container">
-      <h1>PyBursa</h1>
-    </div>
     <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,13 +25,14 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contacts</a></li>
         </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
       <div class="jumbotron">
+        <h1>PyBursa</h1>
         <h2>Description</h2>
         <p class="text">Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это отсутствие практики с освоенным материалом.</p>
         <p class="text">Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить, очень быстро забываются.</p>
