--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
          <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
          <li><a href="contact.html">Contacts</a></li>
-        
+         
          </li>
         </ul>
    
@@ -32,7 +32,7 @@
     
       <h3>Прежде, чем уйти, глянь что ты теряешь.</h3>
       <h4> P.S. не пожалеешь!<h4>
-      <h2 class="progy">Description</h2>
+      <h2 class="progy">PyBursa Description</h2>
       <p> Больше практики, меньше полемики! Только максимум труда сделают из тебя профессионала! 70% практики и 30% процентов теории-вот залог спеха!</p>
       <h2 class="progy">Programm</h2>
       <ul>  
