--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>PythonBursa</title>
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,73 +18,59 @@
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <!-- Single button -->
-    <div class="btn-group">
-     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-      </button>
-        <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">Main</a></li>
-  <li role="presentation"><a href="contact.html">Contacts</a></li>
- 
-</ul>
-</div>
-      <a class="navbar-brand" href="#"></a>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <div class="btn-group">
+            <ul class="nav nav-pills">
+              <li role="presentation" class="active"><a href="#">Main</a></li>
+              <li role="presentation"><a href="contact.html">Contacts</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Python Bursa</h1>
+        <h3>Discription</h3>
+        <p>В этом курсе мы сместили акцент в сторону практики.
+           Будет умеренное количество теории - максимум практики.
+           Примерное соотношение теории и практики: 30% на 70%
+           Курсы будут проходить с 19 октября по 28 декабря.
+           Практические занятия в аудитории + онлайн лекции.
+        </p>
+      </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-     <ul class="nav nav-pills">
- 
-</ul>
-        
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="jumbotron">
-  <div class="container">
-  <h1>Python Bursa</h1>
-  <h3>Discription</h3>
-  <p>В этом курсе мы сместили акцент в сторону практики.
-Будет умеренное количество теории - максимум практики.
-Примерное соотношение теории и практики: 30% на 70%
-Курсы будут проходить с 19 октября по 28 декабря.
-Практические занятия в аудитории + онлайн лекции.
-</p>
- 
-</div>
-</div>
-<div class="jumbotron">
-  <div class="container">
-   <h1>Program</h1>
-  <p>
-   <ul class="list-group">
-  <li class="list-group-item">Основы Python </li>
-  <li class="list-group-item">Строки и итераторы</li>
-  <li class="list-group-item">Функции и модульность</li>
-  <li class="list-group-item">Библиотеки и пакетный менеджер</li>
-  <li class="list-group-item">Классы и ООП, основы</li>
-   <li class="list-group-item">Классы и ООП, возможности Python</li>
-   <li class="list-group-item">Работа с файлами</li>
-  <li class="list-group-item">Работа с датами</li>
-  <li class="list-group-item">Основы html/css</li>
- <li class="list-group-item">Основы JavaScript</li>
- <li class="list-group-item">Основы Web, HTTP</li>
- <li class="list-group-item">Django first steps</li>
- <li class="list-group-item">Структура Web приложения</li>
- <li class="list-group-item">Работа с базами данных, ORM</li>
- <li class="list-group-item">Кастомизация админки</li>
- <li class="list-group-item">Язык шаблонов</li>
- <li class="list-group-item">Forms</li>
- <li class="list-group-item">Class-based (Generic) Views</li>
- <li class="list-group-item">Реализация стандартных задач</li>
- <li class="list-group-item">Средства отладки и тестирование</li>
-  <li class="list-group-item">Деплоймент</li>
- </ul></p>
-</div>
- </div>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Program</h1>
+        <ul class="list-group">
+          <li class="list-group-item">Основы Python </li>
+          <li class="list-group-item">Строки и итераторы</li>
+          <li class="list-group-item">Функции и модульность</li>
+          <li class="list-group-item">Библиотеки и пакетный менеджер</li>
+          <li class="list-group-item">Классы и ООП, основы</li>
+          <li class="list-group-item">Классы и ООП, возможности Python</li>
+          <li class="list-group-item">Работа с файлами</li>
+          <li class="list-group-item">Работа с датами</li>
+          <li class="list-group-item">Основы html/css</li>
+          <li class="list-group-item">Основы JavaScript</li>
+          <li class="list-group-item">Основы Web, HTTP</li>
+          <li class="list-group-item">Django first steps</li>
+          <li class="list-group-item">Структура Web приложения</li>
+          <li class="list-group-item">Работа с базами данных, ORM</li>
+          <li class="list-group-item">Кастомизация админки</li>
+          <li class="list-group-item">Язык шаблонов</li>
+          <li class="list-group-item">Forms</li>
+          <li class="list-group-item">Class-based (Generic) Views</li>
+          <li class="list-group-item">Реализация стандартных задач</li>
+          <li class="list-group-item">Средства отладки и тестирование</li>
+          <li class="list-group-item">Деплоймент</li>
+        </ul>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
