--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 		<title>Course main page</title>
+		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
