--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
 	        <div id="navbar" class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
 	            <li><a href="index.html">Main</a></li>
-	            <li class="active"><a href="#">Contacts</a></li>
+	            <li class="active"><a href="contact.html">Contacts</a></li>
 	          </ul>
 	        </div>
 	      </div>
