--- a/templates/index.html
+++ b/templates/index.html
@@ -27,12 +27,13 @@
   </nav>
   <div class="jumbotron">
     <div class="container">
-      <h1 id="voidi">Войди в IT с PyBursa и языком Python!</h1>
-      <h4 id="ts"> ...уже через 9 1/2 недель ты будешь у цели...<h4>
-    
+      <div class="page-header">
+        <h1>Войди в IT с PyBursa и языком Python!<small> ...уже через 9 1/2 недель ты будешь у цели...</small></h1>
+      </div>
+          
       <h3>Прежде, чем уйти, глянь что ты теряешь.</h3>
-      <h4> P.S. не пожалеешь!<h4>
-      <h2 class="progy">PyBursa Description</h2>
+     
+      <h2 class="progy">Course Description</h2>
       <p> Больше практики, меньше полемики! Только максимум труда сделают из тебя профессионала! 70% практики и 30% процентов теории-вот залог спеха!</p>
       <h2 class="progy">Programm</h2>
       <ul>  
@@ -42,6 +43,7 @@
       </ul>
     </div>
   </div> 
+  <div class="alert alert-success" role="alert">P.S. не пожалеешь!</div>
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
