--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="">Contacts</a></li>
+            <li class="active">Contacts</li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
