--- a/templates/contact.html
+++ b/templates/contact.html
@@ -68,7 +68,8 @@
         
       </div><!-- /.col-lg-4 -->
     </div>
-  </div><!-- /.row -->
+  </div>
+  <div class="alert alert-warning" role="alert">Поторопись!</div><!-- /.row -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
