--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,9 +55,9 @@
 ul {
 	font-family: cursive;
 }
-div {
-	hover { background: #e3e3e3; }
-}
+
+li:hover { background: #e3e3e3; }
+
 li {
 	color: brown;
 }
