--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,6 +3,9 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../static/js/bootstrap-tab.js"></script>
 		<title>Course contacts</title>
 	</head>
 	<body>
@@ -20,12 +23,12 @@
 	        </div>
 	        <div id="navbar" class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
-	            <li><a href="index.html">Main</a></li>
-	            <li class="active"><a href="contact.html">Contacts</a></li>
+	            <li><a href="index.html" id="main_tab">Main</a></li>
+	            <li class="active"><a href="contact.html" id="mytabs">Contacts</a></li>
 	          </ul>
 	        </div>
 	      </div>
-	    </nav>
+	  </nav>
 
 			<div class="container">
 	      <div class="row">
