--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../static/js/bootstrap-tab.js"></script>
 		<title>Course main page</title>
-		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
