--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4543,6 +4543,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
+  opacity: 0.75;
 }
 .navbar-default .navbar-brand {
   color: #777;
@@ -5009,6 +5010,8 @@ a.badge:focus {
   margin-bottom: 30px;
   color: inherit;
   background-color: #eee;
+  opacity: 0.9;
+
 }
 .jumbotron h1,
 .jumbotron .h1 {
