--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>SuperBursa</title>
+    <title>iBursa</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,13 +17,21 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body background="../static/images/computer-science-curriculmn1.png" width="100%">
     <div class="container">
 
       <!-- Static navbar -->
       <nav class="navbar navbar-default">
         <div class="container-fluid">
-          
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <img src="../static/images/python-128.png" width="30" heith="30" vspace="10" hspace="10">
+          </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Main</a></li>
@@ -35,13 +43,75 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+        <h1>iBursa</h1>
+        <h2>Description</h2>
+        <p>This course introduces the student to the Python language. Upon completion of this class, the student will be able to write non trivial Python programs dealing with a wide variety of subject matter domains. Topics include language components, the IDLE environment, control flow constructs, strings, I/O, collections, classes, modules, and regular expressions. The course is supplemented with many hands on labs using either Linux or Windows.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
-      </div>
+        <h2>Program</h2>
+        <ul>
+          <li>Chapter 1: An Introduction to Python
+            <ol>
+              <li>Introduction</li>
+              <li>A Brief History of Python</li>
+              <li>Python Versions</li>
+              <li>Installing Python</li>
+              <li>Environment Variables</li>
+              <li>Executing Python from the Command Line</li>
+              <li>IDLE</li>
+              <li>Editing Python Files</li>
+              <li>Python Documentation</li>
+              <li>Getting Help</li>
+              <li>Dynamic Types</li>
+              <li>Python Reserved Words</li>
+              <li>Naming Conventions</li>
+            </ol>
+          </li>
+          <li>Chapter 2: Basic Python Syntax
+            <ol>
+              <li>Basic Syntax</li>
+              <li>Comments</li>
+              <li>String Values</li>
+              <li>String Methods</li>
+              <li>The <tt>format</tt> Method</li>
+              <li>String Operators</li>
+              <li>Numeric Data Types</li>
+              <li>Conversion Functions</li>
+              <li>Simple Output</li>
+              <li>Simple Input</li>
+              <li>The <tt>%</tt> Method</li>
+              <li>The <tt>print</tt> Function</li>
+            </ol>
+          </li>
+          <li>Chapter 3: Language Components
+            <ol>
+              <li>Indenting Requirements</li>
+              <li>The <tt>if</tt> Statement</li>
+              <li>Relational and Logical Operators</li>
+              <li>Bit Wise Operators</li>
+              <li>The <tt>while</tt> Loop</li>
+              <li><tt>break</tt> and <tt>continue</tt></li>
+              <li>The <tt>for</tt> Loop</li>
+            </ol>
+          </li>
+          <li>Chapter 4: Collections
+            <ol>
+              <li>Introduction</li>
+              <li>Lists</li>
+              <li>Tuples</li>
+              <li>Sets</li>
+              <li>Dictionaries</li>
+              <li>Sorting Dictionaries</li>
+              <li>Copying Collections</li>
+              <li>Summary</li>
+            </ol>
+          </li>
+        </ul>
 
+
+
+
+
+      </div>
     </div> <!-- /container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
