--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
-
 	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="../static/js/bootstrap-tab.js"></script>
+		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 		<title>Course main page</title>
 	</head>
 	<body>
@@ -21,7 +20,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Main</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -30,14 +29,18 @@
 
 		<div class="container theme-showcase" role="main">
 			<div class="jumbotron">
-	        <h1>Description</h1>
-	        <p>In this course we shifted the emphasis towards the practice.
+	      <h1>Description</h1>
+	      <p>In this course we shifted the emphasis towards the practice.
 It will be a moderate amount of theory - maximum of practice.
 Approximate ratio of theory and practice: 30% to 70%
 Courses will take place from October 19 to December 28.
 Practical lessons in the classroom + online lectures.</p>
+				<p>
+					<button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" id="learnbtn">
+  					Learn more
+					</button>
+				</p>	
 	     </div>
-
 	     <div class="page-header">
         <h1>Program</h1>
       </div>
@@ -73,6 +76,12 @@ Practical lessons in the classroom + online lectures.</p>
 
 		</div>
     
+    <script>
+    	$('#learnbtn').on('click', function () {
+    		$(this).button('complete') 
+    		window.alert("Page is under construction");
+  		})
+    </script>
 
 	</body>
 </html>
