fixed description test case

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,8 +23,8 @@
 	        </div>
 	        <div id="navbar" class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
-	            <li><a href="index.html" id="main_tab">Main</a></li>
-	            <li class="active"><a href="contact.html" id="mytabs">Contacts</a></li>
+	            <li><a href="index.html">Main</a></li>
+	            <li class="active"><a href="contact.html">Contacts</a></li>
 	          </ul>
 	        </div>
 	      </div>
