--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">PyBursa</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -29,6 +28,9 @@
 
 		<div class="container theme-showcase" role="main">
 			<div class="jumbotron">
+				<div class="container">
+					<h1>PyBursa</h1>	
+				</div>
 	      <h1>Description</h1>
 	      <p>In this course we shifted the emphasis towards the practice.
 It will be a moderate amount of theory - maximum of practice.
