--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
 
 	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script type="text/javascript" src="../static/js/bootstrap-tab.js"></script>
+		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 		<title>Course contacts</title>
 	</head>
 	<body>
