--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,11 +42,11 @@
       </nav>
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <div class="jumbotron" "transparent">
         <h1>iBursa</h1>
         <h2>Contacts</h2>
         <ul>
-        <li><b>Director:</b></li>
+        <li><b>Director</b></li>
           <img src="../static/images/tim-cook.png" height="150">
             <ul>
               <li><b>Name:</b> Tim Cook</li>
@@ -56,7 +56,7 @@
             </ul>
           </li>
           <br>
-        <li><b>Manager:</b></li>
+        <li><b>Manager</b></li>
           <img src="../static/images/eddy_cue.png" height="150">
         <ul>
           <li><b>Name:</b> Eddy Cue</li>
@@ -66,7 +66,7 @@
           </ul>
         </li>
           <br>
-        <li><b>Founder:</b></li>
+        <li><b>Founder</b></li>
           <img src="../static/images/steve.png" height="150">
         <ul>
           <li><b>Name:</b> Stebe Jobs</li>
