--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,7 +19,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body background="../static/images/computer-science-curriculmn1.png" width="100%">
+  <body>
     <div class="container">
 
       <!-- Static navbar -->
@@ -42,11 +44,11 @@
       </nav>
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <div class="jumbotron transparent list">
         <h1>iBursa</h1>
         <h2>Description</h2>
         <p>This course introduces the student to the Python language. Upon completion of this class, the student will be able to write non trivial Python programs dealing with a wide variety of subject matter domains. Topics include language components, the IDLE environment, control flow constructs, strings, I/O, collections, classes, modules, and regular expressions. The course is supplemented with many hands on labs using either Linux or Windows.</p>
-        <p>
+        <p></p>
         <h2>Program</h2>
         <ul>
           <li>Chapter 1: An Introduction to Python
