new pic and html modified

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,10 @@
   		</div>
 		</nav>
 		<div class ='container'>
-			<div class='jumbotron'><h2 class='text-uppercase'>Contacts</h1></div>
+			<div class='jumbotron'>
+				<h2 class='text-uppercase'>Contacts</h2>
+				<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to write an email</button>
+			</div>
 			<div class="alert alert-success" role="alert">You can contact us!</div>
 			<div class='proffesion'>
 				<hr>
