--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main page</title>
+    <title>Main</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -20,18 +20,19 @@
   </head>
   <body>
 		<nav class="navbar navbar-default navbar-static-top">
-  		<div class="container">
+	  		<div class="container">
 				<ul class="nav navbar-nav">
-        <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html">Contacts</a></li>
-      </ul>
-  		</div>
+			        <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
+			        <li><a href="contact.html">Contacts</a></li>
+				</ul>
+	  		</div>
 		</nav>
 		<div class ='container'>
+			<img class='pybursa' src='../static/images/pybursa.jpg'>
 			<h2 class='possition'>Description</h2>
 			<div class='jumbotron'>
-				<p class='text'>Python course can be easy to pick up whether you're a first time programmer or you're experienced with other languages. <li class="list-group-item list-group-item-warning"><span id='bursa'>PyBursa</span> is a useful first step to get on your way writing programs with Python!</li></p>
-
+				<p class='text'>Python course can be easy to pick up whether you're a first time programmer or you're experienced with other languages.</p>
+				<li class="list-group-item list-group-item-warning"><span id='bursa'>PyBursa</span> is a useful first step to get on your way writing programs with Python!</li>
 				<p class='text2'>The online conferences and meetups, collaborates on code, and much more. Online videos will help you along the way, and the mailing lists will keep you in touch.</p>
 			</div>
 			<h2 class='possition'>Program</h2>
@@ -48,12 +49,12 @@
 					<tr align="center"><td>8</td><td>Forms, class-based views.</td>
 				</table>
 			</div>
-			<p class='glyphicon-ok'>To get more ditails please connect with us</p>
+			<p class='glyphicon-ok'>To get more ditails please connect with us.<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Here</button></p>
 		</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
 
