--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
   		<div class="container">
 				<ul class="nav navbar-nav">
 		      <li><a href="index.html">Main</a></li>
-		      <li class="active"><a href="#">Contacts</a></li>
+		      <li class="active"><a href="contact.html">Contacts</a></li>
       	</ul>
   		</div>
 		</nav>
