--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-default navbar-static-top">
 	  		<div class="container">
 				<ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
+			        <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
 			        <li><a href="contact.html">Contacts</a></li>
 				</ul>
 	  		</div>
