--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,8 +32,8 @@
         </div>
           <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Main</a></li>
+            <li class="active"><a href="contact.html">Contacts</a></li>
           </ul>
         </div>
       </div>
