--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
             </li>
           </ul>
         </div>
