--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,14 @@
     <div class="container">
 
       <div class="main">
-        <h1>Description PyBursa</h1>
+        <div class="container">
+          <h1>Description PyBursa</h1>
+        </div>
+        
         <p class="lead">description</p>
-        <h1>Program</h1>
+        <div class="container">
+          <h1>Program</h1>
+        </div>
         <p>description</p>
         <table class="table table-bordered">
           <thead>
