pattern r"\bDescription\b$" - Ok

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,8 @@
 
       <div class="main">
         <div class="container">
-          <h1>Description PyBursa</h1>
+          <h1>Description
+          PyBursa</h1>
         </div>
         
         <p class="lead">description</p>
