--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,9 @@
 
     <div class="container">
 
-      <div class="main">
+       <div class="jumbotron">
         <div class="container">
-          <h1>Description
-          PyBursa</h1>
+          <h1>Description PyBursa</h1>
         </div>
         
         <p class="lead">description</p>
