--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
        <div class="jumbotron">
         <div class="container">
-          <h1>Description PyBursa</h1>
+          <h1>Description</h1>
         </div>
         
         <p class="lead">description</p>
