added bootstrap template

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,22 +18,25 @@
   </head>
   <body>
   <div class="wrapper">
+    <div class="header container">
+      <h1>PyBursa</h1>
+    </div>
     <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active">Main</li>
-          <li><a href="contact.html">Contacts</a></li>
+          <li class="active"><a href="">Main</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class=><a href="student_list.html">Students</a></li>
         </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
       <div class="jumbotron">
-        <h1>PyBursa</h1>
-        <h2>Description</h2>
+        <h2 class="header_top">Description</h2>
         <p class="text">Наибольшей проблемой всех учебников и статей, по которым начинают изучать Python - это отсутствие практики с освоенным материалом.</p>
         <p class="text">Можно читать тонны ресурсов по веб-программированию на Python - и не научиться ничему, потому что знания, которые вы не успели применить, очень быстро забываются.</p>
         <p class="text">Многие начинающие сдаются на полпути, так как устают, им надоедает бесконечное блуждание по сети в поисках крупиц информации, из которых трудно собрать общую картину.</p>
