--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
 .navbar {
 	width: 1168px;
 }
-.jumbotron h1 {
+.header h1 {
 	text-align: center;	
 }
 .jumbotron {
@@ -45,4 +45,11 @@
 .alert {
 	font-style: italic;
 	padding: 5px 0 5px 0;
+}
+.table a {
+	padding: 10px 8px 10px 8px;
+	margin-left: -8px;
+}
+.table a:hover {
+	background-color: #e7e7e7;
 }
