--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,14 +20,18 @@
   </head>
   <body>
   <div class="wrapper">
+    <div class="header container">
+      <h1>PyBursa</h1>
+    </div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
            <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active">Contacts</li>
+            <li><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
+            <li class=><a href="student_list.html">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -35,7 +39,6 @@
     <div class="container">
       <div class="jumbotron">
         <div id="main_organizers">
-          <h1>PyBursa</h1>
             <h2 class="header_top">
               Организаторы PyBursa
             </h2>
