--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -21,7 +21,7 @@
   <body>
   <div class="wrapper">
     <div class="header container">
-      <h1>PyBursa</h1>
+      <h1>Курс PyBursa</h1>
     </div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
