--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html">Contacts</a></li>
+        <li class="active"><a href="index.html"><div class="italic bold">Main</div> <span class="sr-only">(current)</span></a></li>
+        <li><a href="contact.html"><div class="italic bold">Contacts</div></a></li>
       
       </ul>
      
@@ -49,10 +49,10 @@
 	</nav>
 
 <div class="container">
-<div class="jumbotron">
-<p class="center">PyBursa
+<div class="panel-color jumbotron">
+<p> <div class="center font bold">PyBursa</div>
   <h2>Description</h2></p>
-  <p>Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </p>
+  <p class="justify">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </p>
   <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
 </div>
 </div>
