--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,8 +38,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
        
-        <li><a href="index.html">Main</a></li>
-         <li class="active"><a href="contact.html">Contacts <span class="sr-only">(current)</span></a></li>
+        <li><a href="index.html"><div class="italic bold">Main</div></a></li>
+         <li class="active"><a href="contact.html"><div class="italic bold">Contacts</div> <span class="sr-only">(current)</span></a></li>
        
       </ul>
      
@@ -49,26 +49,26 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="panel panel-default">
+<div class="panel-default">
   <!-- Default panel contents -->
-  <div class="panel-heading">PyBursa is an education company. But not one in the way you might think. We're committed to building the best learning experience inside and out, making PyBursa the best place for our team to learn, teach, and create the online learning experience of the future.</div>
-  <div class="panel" class="panel-body">
-  	<div class="page"class="page-header">
- 		 <h1 >Director <small>of course</small></h6>
+  <div class="justify bold panel-heading">PyBursa is an education company. But not one in the way you might think. We're committed to building the best learning experience inside and out, making PyBursa the best place for our team to learn, teach, and create the online learning experience of the future.</div>
+  <div class="panel panel-body">
+  	<div class=" page page-header">
+ 		 <h1><div class="color">Director <small>of course</small></div></h6>
  		 <p><b>Name:</b> Obod Pavel</p>
  		 <p><b>Email:</b> itbursa100@gmail.com</p>
  		 <p><b>Skype:</b> azaless</p>
  		 <p><b>Phone:</b> +38 063 625 07 55</p>
  		</div>
-		<div class="page"class="page-header">
- 		 <h1>Manager <small>of course</small></h6>
+		<div class="page page-header">
+ 		 <h1><div class="color">Manager <small>of course</small></div></h6>
  		 <p><b>Name:</b> Persianova Olena</p>
  		 <p><b>Email:</b> itbursa100@gmail.com</p>
  		 <p><b>Skype:</b> azaless</p>
  		 <p><b>Phone:</b> +38 063 625 07 55</p>
 		</div>
-		<div class="page"class="page-header">
- 		 <h1>Founder <small>of course</small></h6>
+		<div class="page page-header">
+ 		 <h1><div class="color">Founder <small>of course</small></div></h6>
  		 <p><b>Name:</b> Radchenko Aleksey</p>
  		 <p><b>Email:</b> itbursa100@gmail.com</p>
  		 <p><b>Skype:</b> azaless</p>
