--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,28 +39,31 @@
       <div class="starter-template">
         <div class="container">
           <h1>Contacts</h1>>
-            <h3 >Director</h3>
-              <ul class="director">
-                <li class="list">Name: Ivan T</li>
-                <li class="list">Skype: ivan_t</li>
-                <li class="list">Email: ivan_t@gmail.com</li>
-                <li class="list">Phone: (063)0000000</li>
+            <div class="pre-scrollable">
+              <h3 >Director</h3>
+                <ul class="director">
+                  <li class="list">Name: Ivan T</li>
+                  <li class="list">Skype: ivan_t</li>
+                  <li class="list">Email: ivan_t@gmail.com</li>
+                  <li class="list">Phone: (063)0000000</li>
+                </ul>
+                <h3>Manager</h3>
+                <ul class="manager">
+                  <li class="list">Name:  Kate R</li>
+                  <li class="list">Skype: kate_r</li>
+                  <li class="list">Email: kate_r@gmail.com</li>
+                  <li class="list">Phone: (066)6666666</li>
+                </ul>
+              <h3>Founder</h3>
+              <ul class="founder">
+                <li class="list">Name:  Nik E</li>
+                <li class="list">Skype: nik_e</li>
+                <li class="list">Email: nik_e@gmail.com</li>
+                <li class="list">Phone: (099)9999999</li>
               </ul>
-              <h3>Manager</h3>
-              <ul class="manager">
-                <li class="list">Name:  Kate R</li>
-                <li class="list">Skype: kate_r</li>
-                <li class="list">Email: kate_r@gmail.com</li>
-                <li class="list">Phone: (066)6666666</li>
-              </ul>
-            <h3>Founder</h3>
-            <ul class="founder">
-              <li class="list">Name:  Nik E</li>
-              <li class="list">Skype: nik_e</li>
-              <li class="list">Email: nik_e@gmail.com</li>
-              <li class="list">Phone: (099)9999999</li>
-            </ul>
-        <div>
+             </div>
+        </div>
+      </div>
     </div><!-- /.container -->
 
 
