--- a/templates/index.html
+++ b/templates/index.html
@@ -42,24 +42,31 @@
             <h3>Description</h3>
             <p><br><strong>Django</strong> is a high-level Python Web framework that encourages rapid development and clean, pragmatic design.<br>Built by experienced developers, it takes care of much of the hassle of Web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source<br></p>
             <p>Django is a free and open source web application framework, written in Python, which follows the model–view–controller (MVC) architectural pattern.  It is maintained by the <strong>Django Software Foundation (DSF)</strong>, an independent organization established as a 501(c)(3) non-profit.<br>Django's primary goal is to ease the creation of complex, database-driven websites.<br><br>Django emphasizes reusability and "pluggability" of components, rapid development, and the principle of don't repeat yourself. Python is used throughout, even for settings, files, and data models. Django also provides an optional administrative create, read, update and delete interface that is generated dynamically through introspection and configured via admin models.<br>Some well-known sites that use Django include Pinterest, Instagram, Mozilla, The Washington Times, Disqus, the Public Broadcasting Service, and Bitbucket.</p>
-            <h3>Python console:</h3>
-            <pre   style="text-align:left">
-            python2.7 
-            Python 2.7.10 (default, May 27 2015, 18:11:38) 
-            [GCC 5.1.1 20150422 (Red Hat 5.1.1-1)] on linux2
-            Type "help", "copyright", "credits" or "license" for more information.
-            >>>
-            </pre>
+            <div class="label">
+              <h3>Python console:</h3>
+              <pre   style="text-align:left">
+              python2.7 
+              Python 2.7.10 (default, May 27 2015, 18:11:38) 
+              [GCC 5.1.1 20150422 (Red Hat 5.1.1-1)] on linux2
+              Type "help", "copyright", "credits" or "license" for more information.
+              >>>
+              </pre>
+            </div>
       </div>
       <div class="container">
         <h3>Program</h3>
         <p>Courses program:</p>
-          <ul>
-            <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python 2.7</a></li>
-            <li class="list"><a class="out-link" href="https://git-scm.com/">Git</a></li>
-            <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/HTML">HTML\CSS</a></li>
-            <li class="list"><a class="out-link" href="https://www.djangoproject.com/">Django</a></li>
-          </ul>
+          <div class="form-group">
+            <ul>
+              <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python 2.7</a></li>
+              <li class="list"><a class="out-link" href="https://git-scm.com/">Git</a></li>
+              <li class="list"><a class="out-link" href="https://en.wikipedia.org/wiki/HTML">HTML\CSS</a></li>
+              <li class="list"><a class="out-link" href="https://www.djangoproject.com/">Django</a></li>
+            </ul>
+          </div>
+          <div class="collapse">
+            <p>Text</p>
+          </div>
     </div><!-- /.container -->
 
 
