--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,23 +38,30 @@
 
       <div class="starter-template">
         <div class="container">
-          <h1>Contacts</h1>>
+          <h1>PyBursa courses</h1>>
+          <h2>Contacts</h2>
             <div class="pre-scrollable">
-              <h3 >Director</h3>
+              <div class="thumbnail">
+                <h4 >Director</h4>
+              </div>
                 <ul class="director">
                   <li class="list">Name: Ivan T</li>
                   <li class="list">Skype: ivan_t</li>
                   <li class="list">Email: ivan_t@gmail.com</li>
                   <li class="list">Phone: (063)0000000</li>
                 </ul>
-                <h3>Manager</h3>
+              <div class="thumbnail">
+                <h4>Manager</h4>
+              </div>
                 <ul class="manager">
                   <li class="list">Name:  Kate R</li>
                   <li class="list">Skype: kate_r</li>
                   <li class="list">Email: kate_r@gmail.com</li>
                   <li class="list">Phone: (066)6666666</li>
                 </ul>
-              <h3>Founder</h3>
+              <div class="thumbnail">
+                <h4>Founder</h4>
+              </div>
               <ul class="founder">
                 <li class="list">Name:  Nik E</li>
                 <li class="list">Skype: nik_e</li>
