--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html"><div class="italic bold">Main</div> <span class="sr-only">(current)</span></a></li>
-        <li><a href="contact.html"><div class="italic bold">Contacts</div></a></li>
+        <li class="active"><a href="index.html">Main <span class="sr-only">(current)</span></a></li>
+        <li><a href="contact.html">Contacts</a></li>
       
       </ul>
      
