--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,10 +30,11 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-          <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
@@ -53,7 +54,7 @@
             <h3>Director</h3>
             <p>Name: d_name</p>
             <p>Skype: d_skype</p>
-            <p>Email: d_emal</p>
+            <p>Email: d_email</p>
             <p>Phone: d_phone</p>
             </div>
           </div>
@@ -72,7 +73,7 @@
             <h3>Manager</h3>
             <p>Name: m_name</p>
             <p>Skype: m_skype</p>
-            <p>Email: m_emal</p>
+            <p>Email: m_email</p>
             <p>Phone: m_phone</p>
             </div>
           </div>
@@ -91,7 +92,7 @@
             <h3>Founder</h3>
             <p>Name: f_name</p>
             <p>Skype: f_skype</p>
-            <p>Email: f_emal</p>
+            <p>Email: f_email</p>
             <p>Phone: f_phone</p>
             </div>
           </div>
